--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 header {
     border-bottom: 1px solid green;
-    margin: 10px 5px;
-
+    margin: 0px 150px;
+    text-align: center;
+    background-color: lightskyblue;
 }
+#image1 {
+    border-radius: 50%;
+    width: 20%;
+}
+
 nav {
-    border: 1px solid purple;
+    display: inline-block;
 }
 nav ul {
     padding: 0;
-    margin: 0 20px;
-    list-style-type: none;
+    margin: 0;
 }
 nav li {
     display: inline-block;
@@ -17,20 +22,18 @@ nav li {
 }
 
 h1 {
-    border: 1px solid red;
-    margin: 30px 350px;
+    font-size: 48px;
+    text-align: center;
+    color: darkgreen;
+    margin: 20px 300px;
     display: inline-block
 }
-
 p {
-
-border: 1px solid yellow;
-margin: auto 360px;
-display: inline-block;
+margin: auto 36px;
+text-align: center;
 }
 main {
-    border: 1px solid blue;
     width: 960px;
-    margin: 30px auto;
-
+    margin: 10px auto;
+    background-color: lightgreen;
 }
